--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 id="button-search">Search</button>
         </div>
         <!--------------------- Showing Single Search Detail ----------------------------->
-        <div id="detail" class="w-50 mt-5 mx-auto">
+        <div id="detail" class="w-50 my-5 mx-auto">
 
         </div>
         <!-- --------------------Card for showing search Result -------------------------->
