--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Phone</title>
+    <link rel="shortcut icon" href="./img/p.jpeg" type="image/x-icon">
     <!------------------------------ BootStrap Link-------------------------------------------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -14,7 +15,7 @@
 
 <body class="bg-light">
     <section class="container">
-        <h1 class="text-center text-primary mt-5">Search Your Phone </h1>
+        <h1 class="text-center text-primary mt-5">Mobile Quest</h1>
 
         <div class="input-group mb-3 w-50 mx-auto mt-5">
             <input id="search-field" type="text" class="form-control  text-center" placeholder="search your Phone"
@@ -26,8 +27,11 @@
         <div id="detail" class="w-100 my-5 mx-auto">
 
         </div>
+        <h1 id="empty" class="text-center text-danger">Please Input Your Inquiry</h1> 
+        <h1 id="number" class="text-center text-danger">Number is nor acceptable</h1> 
         <!-- --------------------Card for showing search Result -------------------------->
-        <div id="search-result" class="row row-cols-1 row-cols-md-3 g-5">              
+        <div id="search-result" class="row row-cols-1 row-cols-md-3 g-5"> 
+                        
          </div>        
         
     </section>
