--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         <div id="detail" class="w-100 my-5 mx-auto">
 
         </div>
-        <h1 id="empty" class="text-center text-danger">Please Input Your Inquiry</h1> 
-        <h1 id="number" class="text-center text-danger">Number is nor acceptable</h1> 
+        <h6 id="empty" class="text-center text-danger">Please Input Your Inquiry</h6> 
+        <h6 id="number" class="text-center text-danger">Number is nor acceptable</h6> 
+        <h6 id="falsy" class="text-center text-danger">There is no item Like this</h6> 
         <!-- --------------------Card for showing search Result -------------------------->
-        <div id="search-result" class="row row-cols-1 row-cols-md-3 g-5"> 
+        <div id="search-result" class="row row-cols-1 row-cols-md-3 g-5 mb-5"> 
                         
          </div>        
         
